fixed header overlaping issue.

--- a/client/src/components/App/App.scss
+++ b/client/src/components/App/App.scss
@@ -2,3 +2,7 @@
 @import '../../assets/styles/link';
 @import '../../assets/styles/form';
 @import '../../assets/styles/collection';
+
+.content-wrapper {
+  padding: 2.5em 10px;
+}
