--- a/client/src/components/common/Headline/Headline.scss
+++ b/client/src/components/common/Headline/Headline.scss
@@ -1,6 +1,5 @@
 .headline {
   text-align: center;
-  margin-top: 1.5em;
   margin-bottom: 5em;
   font-family: 'Montserrat';
 
